# test_cdc_minio

./: README.md  curl.sh  database_test_writes.py  docker-compose.yml  dockerfile  test.py
db_work/: base.py  holding.py  insert.py  pyproject.toml
