[tool.poetry]
name = "docker_assignment"
version = "0.1.0"
description = ""
authors = ["SMukanov <smukanov@beeline.kz>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4.39"
psycopg2-binary = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"